--- a/USB-Monitor/USB-Monitor.csproj
+++ b/USB-Monitor/USB-Monitor.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0B3834F4-3EF6-4E71-B3A9-831EB4BDA727}</ProjectGuid>
+    <ProjectGuid>{CA54F641-9565-4F7C-AFF0-36EDBFF8A438}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>USB_Monitor</RootNamespace>
+    <AssemblyName>USB-Monitor</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
